@@ -1,0 +1,10 @@
+# Auto IRC Bot. An advanced, lightweight and powerful IRC bot.
+# Copyright (C) 2010-2011 Xelhua Development Team (doc/CREDITS)
+# This program is free software; rights to this code are stated in doc/LICENSE.
+
+# Subroutines for parsing incoming data from IRC.
+package Parser::IRC;
+use strict;
+use warnings;
+
+
